welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: value =< is not a member of Int
  if (a<=40 && a>=30 && b=<40 && b>=30){
                         ^in3050:4: error: value =< is not a member of Int
  } else if (a<=500 && a>=40 && b=<50 && b>=40){
                                 ^in3050:7: error: not found: value faslse
    return faslse
           ^